syntax = "proto3";
package protobuf;

option go_package = "open-secret-share/protobuf";


service OpenSecretShare {
  rpc Initialize (InitializeRequest) returns (InitializeResponse) {}
  rpc Recieve(RecieveRequest) returns (RecieveResponse) {} 
  rpc GetPublicKey(GetPubKeyRequest) returns (GetPubKeyResponse) {}
  rpc Store(StoreRequest) returns (StoreResponse) {}
  
}


// ---- Store ----
message StoreRequest {
  string enc_message = 1;
}

message StoreResponse {
  string message_id =1;
}

// ---- Recieve ----
message RecieveRequest {
  string message_id = 1;
}

message RecieveResponse {
  string data = 1;
}


// ---- Initialize ----
message InitializeRequest {
  bytes pubkey = 1;
  string username = 2;
}

message InitializeResponse {
  string message = 1;
}


//---- Peek ----
message PeekRequest {
  string username = 1;
}

message PeekResponse {
  bool exists = 1;
}



// ---- GetPubKey ----
message GetPubKeyRequest {
  string username = 1;
}

message GetPubKeyResponse {
  bytes pubkey =1;
}


// ---- Send ----
message SendRequest {
  string userID = 1;
}

message SendResponse {
  bytes pubkey = 1;
}